use own tigera-dex image

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -76,5 +76,5 @@ components:
     image: tigera/cloud-controllers
     version: master
   dex:
-    image: dexidp/dex
-    version: v2.25.0
+    image: tigera/idpdex
+    version: v2
