--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -23,7 +23,7 @@ components:
     version: v3.15.2
   cnx-node:
     image: tigera/cnx-node
-    version: v3.15.2
+    version: v3.15.2dns
   fluentd:
     image: tigera/fluentd
     version: v3.15.2
